# Retr0Engine

./: .gitmodules  CMakeLists.txt  README.md
src/Core/: CMakeLists.txt
src/Core/includes/: Application.hpp  Callback.hpp  ImGuiLayer.hpp  Log.hpp  Settings.hpp  Shader.hpp  Utils.hpp  VertexBuffer.hpp  Window.hpp
src/Core/includes/private_includes/: Window.hpp
src/Core/includes/utils/: IOstream.hpp  Retr0Ptr.hpp  Retr0Str.hpp
src/Core/shaders/: fragment.txt  imgui.ini  vertex.txt
src/Core/src/: Application.cpp  Callback.cpp  ImGuiLayer.cpp  Settings.cpp  Shader.cpp  VertexBuffer.cpp  Window.cpp
src/Core/src/utils/: IOstream.cpp  Retr0Ptr.cpp  Retr0Str.cpp
src/Editor/: CMakeLists.txt
src/Editor/src/: main.cpp
